# Processing-images-in-C

./: CMakeLists.txt  bmp24.c  bmp24.h  functions.c  functions.h  like  main.c
Image_mod/: bmp8.c  bmp8.h  main.c  utils.c  utils.h
